群聊功能实现

--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,21 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    /**修改全局的滚动条*/
+/**滚动条的宽度*/
+::-webkit-scrollbar {
+  width: 8px; 
+ 
+}
+::-webkit-scrollbar-thumb {
+  background-color: #eaecf1;
+  border-radius: 3px;
+}
+  </style>
 </html>
